--- a/Post Edit Compare/ReportViewer/Controls/Report.xaml
+++ b/Post Edit Compare/ReportViewer/Controls/Report.xaml
@@ -10,6 +10,7 @@
              d:DesignWidth="800">
     <Grid>
         <wpf:WebView2 Name="WebView2Browser"
+                      WebMessageReceived="CoreWebView2_WebMessageReceived"
                       Loaded="WebView2Browser_OnLoaded" />
     </Grid>
 </UserControl>
