--- a/Reports.Viewer/Reports.Viewer/View/BrowserView.xaml
+++ b/Reports.Viewer/Reports.Viewer/View/BrowserView.xaml
@@ -1,53 +1,87 @@
 ﻿<UserControl x:Class="Reports.Viewer.Plus.View.BrowserView"             
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
-             xmlns:viewModel="clr-namespace:Reports.Viewer.Plus.ViewModel"
-             mc:Ignorable="d" 			 
-             d:DesignHeight="150" d:DesignWidth="650" d:DataContext="{d:DesignInstance viewModel:ReportViewModel}">
-	<UserControl.Resources>
-		<ResourceDictionary>
-			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/General.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/WindowsBorder.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/ExpanderStyle.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/TreeView.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/Buttons.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/ButtonsStyle.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/TextBoxStyle.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/WindowsBorder.xaml" />
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/DataGridColumnStyle.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/TextBlockStyle.xaml"/>
-				<ResourceDictionary Source="pack://application:,,,/Reports.Viewer.Plus;component/Styles/DataGridStyle.xaml"/>
-			</ResourceDictionary.MergedDictionaries>
-		</ResourceDictionary>
-	</UserControl.Resources>
+                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+				xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+				xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+				xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+				xmlns:converters="clr-namespace:Reports.Viewer.Plus.Converters"
+				xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
+				xmlns:viewModel="clr-namespace:Reports.Viewer.Plus.ViewModel"
+				mc:Ignorable="d" 			 
+				d:DesignHeight="150" d:DesignWidth="650" d:DataContext="{d:DesignInstance viewModel:BrowserViewModel}">
+    <UserControl.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+        <ContextMenu x:Key="CustomContextMenu">
+            <MenuItem Header="Edit report properties" 
+					  IsEnabled="True"
+					  Command="{Binding EditReportCommand}"
+					  CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
+                <MenuItem.Icon>
+                    <Image Source="../Resources/Edit.ico"/>
+                </MenuItem.Icon>
+            </MenuItem>
+            <MenuItem Header="Remove report from project" 
+					  IsEnabled="True"
+					  Command="{Binding RemoveReportCommand}"
+					  CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
+                <MenuItem.Icon>
+                    <Image Source="../Resources/Delete.ico"/>
+                </MenuItem.Icon>
+            </MenuItem>
+            <Separator/>
+            <MenuItem Header="Print Report" 
+					  IsEnabled="True"
+					  Command="{Binding PrintReportCommand}"
+					  CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
+                <MenuItem.Icon>
+                    <Image Source="../Resources/Print.ico"/>
+                </MenuItem.Icon>
+            </MenuItem>
+            <MenuItem Header="Save As" 
+					  IsEnabled="True"
+					  Command="{Binding SaveAsCommand}"
+					  CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
+                <MenuItem.Icon>
+                    <Image Source="../Resources/Save.ico"/>
+                </MenuItem.Icon>
+            </MenuItem>
+            <Separator/>
+            <MenuItem Header="Open folder in explorer" 
+					  IsEnabled="True"
+					  Command="{Binding OpenFolderCommand}"
+					  CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
+                <MenuItem.Icon>
+                    <Image Source="../Resources/Folder.png"/>
+                </MenuItem.Icon>
+            </MenuItem>
+        </ContextMenu>
+    </UserControl.Resources>
 
+    <Grid Margin="0"
+		  Visibility="{Binding IsValidReport, Converter={StaticResource BooleanToVisibilityConverter}}"
+		  >
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-	<Grid Margin="0" AllowDrop="False">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*"/>
-		</Grid.RowDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
-		<ProgressBar IsIndeterminate="{Binding IsLoading, ElementName=WebBrowser}"
-		             HorizontalAlignment="Stretch"
-		             VerticalAlignment="Top"
-		             Grid.Row="0"
-		             Height="2"
-		             Background="Transparent"
-		             Visibility="{Binding IsLoading, ElementName=Browser, Converter={StaticResource BooleanToVisibilityConverter}}"
-		             BorderThickness="0" />
+        <ProgressBar 
+			 IsIndeterminate="{Binding IsLoading}"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Top"
+             Grid.Row="0"
+             Height="2"
+             Background="Transparent"
+	         Visibility="{Binding IsLoading, Converter={StaticResource BooleanToVisibilityConverter}}"
+             BorderThickness="0" />
 
-		<wpf:ChromiumWebBrowser x:Name="WebBrowser" 
-		                        Address="{Binding Address, Mode=OneWay,  UpdateSourceTrigger=PropertyChanged}"
-		                        Grid.Row="1" />
-
-	</Grid>
-
+        <wpf:ChromiumWebBrowser x:Name="WebBrowser" 
+                                Address="{Binding Address, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" 
+                                Grid.Row="1"
+								Background="White"
+                                PreviewMouseRightButtonDown="WebBrowser_PreviewMouseRightButtonDown" />
+    </Grid>
 </UserControl>
