ReportsViewerPlus 4.0.2.0 - SDLCOM-5305: Added new view and viewModel to support "Save As" for multiple selected reports from DataView

--- a/Reports.Viewer/Reports.Viewer/View/DataView.xaml
+++ b/Reports.Viewer/Reports.Viewer/View/DataView.xaml
@@ -235,7 +235,7 @@
 						</MenuItem.Icon>
 					</MenuItem>-->
 					<MenuItem Header="Save As" 
-					          IsEnabled="{Binding IsReportSelected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+					          IsEnabled="{Binding IsReportsSelected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
 					          Command="{Binding SaveAsCommand}"
 					          CommandParameter="{Binding RelativeSource={RelativeSource Self}}">
 						<MenuItem.Icon>
