Report Comparison Window: Close after a report has been created

--- a/Post Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportExplorer.xaml
+++ b/Post Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportExplorer.xaml
@@ -14,6 +14,7 @@
     <DockPanel LastChildFill="True">
 
         <ListBox ItemsSource="{Binding Reports}"
+                 x:Name="ReportList"
                  SelectionChanged="Selector_OnSelectionChanged"
                  SelectedItem="{Binding SelectedReport}">
             <ListBox.ItemTemplate>
