--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportExplorer.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/ReportExplorer.xaml
@@ -5,15 +5,51 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:model="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.Model"
              xmlns:viewModel="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.ViewModel"
+             xmlns:controls="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.ReportView.Controls"
+             xmlns:core="clr-namespace:Sdl.ProjectAutomation.Core;assembly=Sdl.ProjectAutomation.Core"
+             xmlns:converters="clr-namespace:Sdl.Community.PostEdit.Versions.HTMLReportIntegration.Converters"
              Name="Root"
              d:DataContext="{d:DesignInstance viewModel:ReportExplorerViewModel}"
              mc:Ignorable="d"
              d:DesignHeight="450"
              d:DesignWidth="800">
 
-    <DockPanel LastChildFill="True">
+    <UserControl.Resources>
 
-        <ListBox ItemsSource="{Binding Reports}"
+        <DataTemplate DataType="{x:Type core:ProjectInfo}"
+                      x:Key="FilterTemplate">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Image Grid.Column="0"
+                       Source="../../../Resources/Project.png"
+                       Width="15" />
+                <TextBlock Grid.Column="1"
+                           Margin="5 0 0 0"
+                           Text="{Binding Name}"
+                           DockPanel.Dock="Right" />
+            </Grid>
+        </DataTemplate>
+    </UserControl.Resources>
+
+    <Grid Margin="10">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <controls:MultiItemSelect Margin="0 10 -2 10"
+                                  HorizontalAlignment="Stretch"
+                                  HorizontalContentAlignment="Stretch"
+                                  SelectedItems="{Binding SelectedProjects, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                  ItemsSource="{Binding Projects}"
+                                  ItemTemplate="{StaticResource FilterTemplate}"
+                                  SelectedItemTemplate="{StaticResource FilterTemplate}" />
+
+        <ListBox Grid.Row="1"
+                 ItemsSource="{Binding Reports}"
                  x:Name="ReportList"
                  SelectionChanged="Selector_OnSelectionChanged"
                  SelectedItem="{Binding SelectedReport}">
@@ -32,5 +68,5 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-    </DockPanel>
+    </Grid>
 </UserControl>
