Report Explorer: Add New Report Folder action

--- a/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/MultiItemSelect.xaml
+++ b/Post-Edit Compare/Sdl.Community.PostEdit.Compare.Versions/HTMLReportIntegration/ReportView/Controls/MultiItemSelect.xaml
@@ -34,7 +34,7 @@
             Background="{Binding BorderBackground, ElementName=Root}"
             BorderThickness="{Binding BorderThickness, ElementName=Root}">
 
-        <Grid MaxWidth="{Binding ActualWidth, ElementName=Root}">
+        <Grid MaxWidth="{Binding ActualWidth, ElementName=Root}" Background="Transparent">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
